# acx-contact-cli

./: .clang-format  .clang-tidy  .cmake-format.yaml  .codespellrc  .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY.md  ACCESSIBILITY_STATEMENT.md  API_STABILITY.md  ARTIFACT_RETENTION.md  ASSURANCE_CASE.md  AUDIT.md  AUDIT_PLAN.md  BACKPORTS.md  CHANGELOG.md  CITATION.cff  CLI_ACCESSIBILITY.md  CMakeLists.txt  CMakePresets.json  CODE_METRICS.md  CODE_OF_CONDUCT.md  CODE_REVIEW_CHECKLIST.md  COMPATIBILITY.md  COMPLIANCE.md  CONFIGURATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATA_RETENTION.md  DCO  DEPRECATION_POLICY.md  DETERMINISM.md  Dockerfile  Dockerfile.distroless  Dockerfile.musl  Doxyfile  (+48 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: actions-pin.yml  attest.yml  bench-gate.yml  bench.yml  build-matrix.yml  checksums.yml  ci-matrix.yml  ci.yml  clamav.yml  clang-format.yml  clang-tidy.yml  cli-dataops-smoke.yml  cli-smoke.yml  cmake-format.yml  codeql.yml  codespell.yml  commitlint.yml  contract.yml  coverage-gate.yml  coverage-html.yml  coverage.yml  cppcheck.yml  dco.yml  dependency-review.yml  docker-multiarch.yml  docs.yml  doxygen.yml  e2e.yml  frontier.yml  fuzz-weekly.yml  fuzz.yml  gitleaks.yml  hadolint.yml  help2man.yml  iwyu.yml  labeler.yml  libphonenumber.yml  licensee.yml  lint.yml  lychee.yml  (+37 more)
.reuse/: dep5
benchmarks/: baseline.json
cmake/: acx.pc.in  acxConfig.cmake.in
cmake/toolchains/: mingw64.cmake
completions/: _acx  acx.bash  acx.fish  acx.zsh
completions/powershell/: acx.ps1
compliance/: SBOM.cdx.json
docs/: ADVANCED_DATAOPS.md  APPARMOR.md  AUDIT_LOGGING.md  BUILD_OPTIONS.md  BUILD_PRESETS.md  CHANGELOG_GUIDE.md  CI_HEALTH.md  COMPLETIONS.md  CONFIGURATION.md  DATA_OPERATIONS.md  DATA_RETENTION.md  DATA_SCHEMA.md  DIFFING.md  DOCTOR_AND_CONFIG.md  DR_PLAN.md  ENCRYPTION.md  ENVIRONMENT.md  EXITCODES.md  FRONTIER_CERTIFICATE.md  HARDENING.md  HARDENING_FLAGS.md  HELP_JSON.md  I18N.md  INTEGRATION_CMAKE.md  INTEGRATION_PKGCONFIG.md  INTEGRITY_AND_REPORTS.md  INTERRUPTS_AND_WINDOWS.md  JSON_OUTPUTS.md  JSON_OUTPUT_SPEC.md  MIGRATION_GUIDE.md  OPERATIONS.md  OPERATIONS_SLO.md  PACKAGING.md  PERFORMANCE.md  PERFORMANCE_TUNING.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_POLICY.md  REPRODUCIBLE_BUILDS.md  ROOTLESS_DOCKER.md  (+15 more)
docs/adr/: 0001-record-architecture-decisions.md
docs/compliance/: open-source-policy.md
docs/man/: acx.1
docs/rfcs/: 0000-template.md
examples/: config.json  contacts.csv  contacts.jsonl  embed_acxlib.cpp  sample.cfg
examples/integration/cmake/: CMakeLists.txt  main.cpp
examples/integration/pkg-config/: Makefile  main.cpp
fuzz/: csv_fuzz.cpp  jsonl_fuzz.cpp
fuzz/corpus/csv/: seed1.csv
fuzz/corpus/jsonl/: seed1.jsonl
fuzz/dict/: csv.dict
include/acx/: buildinfo.hpp.in  exit_codes.hpp  export.hpp  json.hpp  sha256.hpp  version.hpp.in
man/: acx.1
packaging/appimage/: README.md
packaging/arch/: PKGBUILD
packaging/chocolatey/: acx.nuspec  readme.txt
packaging/debian/: changelog  control
packaging/homebrew/: acx.rb
packaging/homebrew/Formula/: acx.rb
packaging/rpm/: acx.spec
packaging/snap/: snapcraft.yaml
packaging/systemd/: acx.service
packaging/windows/: acx_installer.nsi
packaging/winget/: manifest.yaml
policies/workflows/: policy.rego
schemas/: README.md  add.json  audit.json  backup.json  contact.json  contact.schema.json  list.json  search.json
scripts/: bench.sh  bench_ci.py  bench_cli.py  bench_gate.py  bench_smoke.sh  check_actions_pinned.py  checksums.sh  e2e_smoke.sh  enforce_spdx.py  flamegraph.sh  install.sh  make_sbom.sh  notices_from_sbom.py  preflight.sh  provenance_local.py  repro.sh  repro_check.sh  sbom_diff.py  sbom_license_policy.py  set_source_date_epoch.sh  validate_jsonl_schema.py  verify_release.sh
security/apparmor/: acx
security/seccomp/: acx.json
security/selinux/: acx.te
src/: audit.cpp  audit.hpp  bench.cpp  cli.cpp  config.cpp  config.hpp  crypto.hpp  crypto_file.cpp  crypto_file.hpp  csv.cpp  csv.hpp  diff.cpp  diff.hpp  disk_index.cpp  disk_index.hpp  doctor.cpp  doctor.hpp  hmac.cpp  hmac.hpp  index.cpp  index.hpp  jsonl.cpp  jsonl.hpp  lock.cpp  lock.hpp  log.cpp  log.hpp  log_level.cpp  log_level.hpp  merge.cpp  merge.hpp  metrics.cpp  metrics.hpp  model.cpp  model.hpp  otel.cpp  otel.hpp  policy.cpp  policy.hpp  redact.cpp  (+21 more)
tests/: cli_smoke.sh  contract_version.py  selftest.cpp  test_backup.cpp  test_checksum.cpp.cpp  test_config_env.cpp  test_config_init.cpp  test_config_loader.cpp  test_dedupe.cpp  test_doctor.cpp  test_hash_cmd.cpp  test_help_json.cpp  test_hmac.cpp  test_merge.cpp.cpp  test_normalize.cpp.cpp  test_phone.cpp  test_policy.cpp  test_report_cmd.cpp  test_roundtrip.cpp  test_selfcheck.cpp  test_threads_validate.cpp  test_tsv.cpp  test_validate.cpp  test_validation.cpp  test_version_json.cpp  unit_micro.hpp
